# telco-support-ai-agent

./: .env.example  .gitignore  README.md
Question1/: .dockerignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
Question1/data/evals/: chat_benchmark_latest.json  chat_eval.json  retrieval_benchmark_latest.json  retrieval_eval.json
Question1/data/knowledge_base/: billing_policy.md  service_plans.md  troubleshooting_guide.md
Question1/scripts/: eval_chat.py  eval_retrieval.py  ingest.py  smoke.py  wait_for_qdrant.py
Question1/src/telco_agent/: __init__.py  settings.py
Question1/src/telco_agent/api/: dependencies.py  main.py
Question1/src/telco_agent/api/routes/: chat.py  health.py
Question1/src/telco_agent/application/: chat_service.py  ingestion_service.py
Question1/src/telco_agent/domain/: knowledge_base.py  models.py  prompting.py
Question1/src/telco_agent/infrastructure/: embeddings.py  logging.py  openrouter.py  qdrant_store.py  rerank.py  retrieval.py
Question1/tests/integration/: test_api.py  test_health_and_main.py  test_qdrant_store.py
Question1/tests/unit/: test_chat_service.py  test_dependencies.py  test_embeddings.py  test_hybrid_retrieval.py  test_ingestion_service.py  test_knowledge_base.py  test_logging.py  test_openrouter_adapter.py  test_prompting.py  test_rerank.py  test_settings.py
Question2/: architecture.mmd  design.md
